cabal-version:       2.2
name:                guardedt
version:             0.1.0.0
homepage:            github.com/ehammarstrom/guardedt
license:             BSD-3-Clause
license-file:        LICENSE
author:              Emil Hammarström
maintainer:          emil.a.hammarstrom@gmail.com
category:            Control

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  CHANGELOG.md

library
  -- Modules exported by the library.
  exposed-modules:   Control.Monad.Trans.Guarded
                   , Control.Monad.Trans.Guarded.Internal

  build-depends:     base ^>=4.11.1.0
                   , mtl ^>=2.2.2
                   , transformers ^>=0.5.5.0
                   , ghc-prim ^>=0.5.2

  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite test
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  hs-source-dirs:    examples
  main-is:           Main.hs
  build-depends:     base ^>=4.11.1.0
                   , mtl ^>=2.2.2
                   , transformers ^>=0.5.5.0
                   , guardedt